Fixed wrong color on the toolbar

--- a/userChrome.css
+++ b/userChrome.css
@@ -47,7 +47,7 @@
 }
 
 #nav-bar {
-	background-color: #1d1d1d1d !important;
+	background-color: #0a0a0a !important;
 	border: none !important;
 	margin: none !important;
 	padding: none !important;
